Fixed header spacing.

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -122,7 +122,7 @@ h2 {
     flex-wrap: wrap; }
     @media screen and (min-width: 1024px) {
       .l-header__container {
-        width: 90%; } }
+        width: 95%; } }
 
 .c-main__container {
   width: 960px;
@@ -344,7 +344,8 @@ h2 {
 
 .c-logo {
   align-self: center;
-  color: #cceef6; }
+  color: #cceef6;
+  flex-grow: 1; }
   .c-logo__img {
     width: 60px;
     margin-right: 20px; }
@@ -372,6 +373,7 @@ h2 {
   display: flex; }
   .c-navigation--header {
     color: rgba(255, 255, 255, 0.5);
+    flex-grow: 2;
     -webkit-box-align: end;
     -ms-flex-align: end;
     -webkit-align-items: flex-end;
